--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <section class="text-center py-16 bg-white">
                     <!-- Logo Image -->
                     <div class="flex justify-center mb-4">
-                        <img src="images/logo.png" alt="Logo" class="w-24 h-24 rounded-full shadow-md">
+                        <img src="images/logo.PNG" alt="Logo" class="w-24 h-24 rounded-full shadow-md">
                     </div>
                 
                     <!-- Heading -->
